feat(chat): Implement ChatRoom/Message components and WebSocket handling